[metadata]
name = paris_pricer
version = 0.0.1
description = A package to predict real estate prices in Paris, Île-de-France
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    folium
    geopandas
    pandas
    matplotlib
    scikit-learn
    shapely
    streamlit
    streamlit_folium
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    open_paris_pricer = src.app:main
